# swinirv2

./: .gitignore  main_test_swinir.py  main_train_psnr.py  pyproject.toml
.spyproject/config/: workspace.ini
data/: dataset_sr.py
models/: loss.py  network_swinir.py
options/swinir/: train_swinir_sr_classical.json  train_swinir_sr_classical.json.save
superresolution/swinir_sr_classical_patch48_x2/options/: train_swinir_sr_classical_211211_095718.json  train_swinir_sr_classical_211211_100451.json
test_swinir/: main_test_swinir.py  pyproject.toml
test_swinir/testsets/slices/HR/: 0.npz  1.npz  2.npz  3.npz  4.npz  5.npz  6.npz  7.npz  8.npz
test_swinir/testsets/slices/LR_bicubic/X2/: 0x2.npz  1x2.npz  2x2.npz  3x2.npz  4x2.npz  5x2.npz  6x2.npz  7x2.npz  8x2.npz
test_swinir/testsets/slices/LR_bicubic/X3/: 0x3.npz  1x3.npz  2x3.npz  3x3.npz  4x3.npz  5x3.npz  6x3.npz  7x3.npz  8x3.npz
test_swinir/testsets/slices/LR_bicubic/X4/: 0x4.npz  1x4.npz  2x4.npz  3x4.npz  4x4.npz  5x4.npz  6x4.npz  7x4.npz  8x4.npz
test_swinir/testsets/slices/LR_bicubic/X8/: 0x8.npz  1x8.npz  2x8.npz  3x8.npz  4x8.npz  5x8.npz  6x8.npz  7x8.npz  8x8.npz
test_swinir/utils/: util_image.py  util_npz.py
utils/: test_f2g.py  util_npz.py  utils_float_to_grayscale.py  utils_image.py  utils_npz.py  utils_npz.py.save
