[tool.poetry]
name = "swinirv2"
version = "0.1.0"
description = ""
authors = ["chashi-mahiul-islam-bd <ci20l@my.fsu.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
opencv-python = "^4.5.4"
scikit-image = "^0.19.0"
Pillow = "^8.4.0"
torchvision = "^0.11.1"
hdf5storage = "^0.1.18"
ninja = "^1.10.2"
matplotlib = "^3.5.1"
timm = "^0.4.12"
requests = "^2.26.0"
gpustat = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
